--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="/reset.css" />
-    <meta name="description" content="더미 파일" />
+    <meta name="description" content="조범준 프론트 엔드 개발자 포트폴리오" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>조범준 포트폴리오 :: JBJ's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
