--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <meta name="description" content="조범준 프론트 엔드 개발자 포트폴리오" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>조범준 포트폴리오 :: JBJ's Portfolio</title>
